Update ChartDataControllerTest.java